hphp/hack/test/typecheck/expression_trees/invalid_operator.php.exp
File "invalid_operator.php", line 13, characters 13-18:
Unsupported syntax for expression trees. (Parsing[1002])
File "invalid_operator.php", line 16, characters 13-22:
Unsupported syntax for expression trees. (Parsing[1002])
File "invalid_operator.php", line 17, characters 13-21:
Unsupported syntax for expression trees. (Parsing[1002])
File "invalid_operator.php", line 20, characters 13-20:
Unsupported syntax for expression trees. (Parsing[1002])
File "invalid_operator.php", line 23, characters 13-36:
Unsupported syntax for expression trees. (Parsing[1002])
File "invalid_operator.php", line 26, characters 22-39:
Unsupported syntax for expression trees. (Parsing[1002])
File "invalid_operator.php", line 27, characters 37-61:
Unsupported syntax for expression trees. (Parsing[1002])
File "invalid_operator.php", line 30, characters 18-19:
Unsupported syntax for expression trees. (Parsing[1002])
File "invalid_operator.php", line 33, characters 32-36:
Unsupported syntax for expression trees. (Parsing[1002])
File "invalid_operator.php", line 34, characters 32-38:
Unsupported syntax for expression trees. (Parsing[1002])
File "invalid_operator.php", line 37, characters 28-34:
Unsupported syntax for expression trees. (Parsing[1002])
